Fixed spacing in date for experience section

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,9 @@ html.dark {
 .borderBlack {
     @apply border border-black/10
 }
+
+@media only screen and (min-width: 1170px) {
+    span.vertical-timeline-element-date {
+        margin: 0 1rem 0 1rem;
+    }
+}
